# Data-Imputation-and-Clustering-Analysis

./: .gitignore  README.md  pyproject.toml
data/: small.xlsx
report/: Отчет_Лаб2_ГИГАПОДРОБНЫЙ.docx  Отчет_Лаб2_ПОЛНЫЙ_ДЕТАЛЬНЫЙ — копия.docx
src/: analysis.py  visualization.ipynb
src/add_method/: small.ipynb
src/comparison/group/: group10.ipynb  group3.ipynb  group30.ipynb
src/comparison/zet/: zet10.ipynb  zet3.ipynb  zet30.ipynb
src/visualization/: medium.ipynb  small.ipynb
src/visualization_clustering/: euclidian.ipynb  ward.ipynb
src/visualization_clustering/before_recover/: chebyshev3.ipynb  inf_ward.ipynb  ward.ipynb  ward3.ipynb
src/visualization_clustering/informative/: cheb_before.ipynb  ward_before.ipynb
src/visualization_clustering/informative/recovered/group/: cheb20.ipynb  ward10.ipynb  ward3.ipynb  ward30.ipynb
src/visualization_clustering/informative/recovered/zed/: cheb20.ipynb  ward10.ipynb  ward3.ipynb  ward30.ipynb
src/visualization_data/: large.ipynb  small.ipynb
